--- a/chung.css
+++ b/chung.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     font-family: sans-serif;
-    font-size: 17px;
     box-sizing: border-box;
 }
 li{
@@ -11,10 +10,9 @@ a{
     text-decoration: none;
     color: #fff;
 }
-
-
-/* Header */
-
+.open{
+    display: flex !important;
+}
 #header{
     display: flex;
     padding: 0 10%;
@@ -51,7 +49,7 @@ a{
     cursor: pointer;
     width: 100%;
 }
-#header> a{
+#header >a{
     display: flex;
 }
 .header_list_child{
@@ -154,210 +152,30 @@ a{
     padding: 0 12px;
     font-weight: 200;
 }
-
-/* Body_review */
-
-#body_review{
+#body{
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 40px;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 1);
-    border-radius: 4px;
-    overflow: hidden;
 }
-.body_review_left{
-    position: relative;
-    overflow: hidden;
+.body_left{
+    width: 60%;
 }
-.faded::after{
-    position: absolute;
-    content: "";
-    background-image: linear-gradient(0, rgba(0,0,0,0.7) , rgba(255, 255, 255, 0) 60%);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: block;
-    bottom: 0;
+.body_right{
+    width: 40%;
+    margin-left: 28px;
 }
-.body_review_left img{
-    width: 100%;
-    height: 100%;
-    transition: transform 0.2s linear;
-}
-.body_review_left:hover img{
-    transform: scale(1.1);
-}
-.body_review_content{
-    z-index: 2;
-    bottom: 0;
-    position: absolute;
-    color: #fff;
-    margin-left: 20px;
-}
-.body_review_content_1{
-    font-size: 10px;
-    margin-bottom: 8px;
-    background-color: #333;
-    display: inline-block;
-    padding: 4px 8px;
-    font-weight: 600;
-}
-.faded:hover .body_review_content_1{
-    background-color: #4db2ec;
-}
-.body_review_content_2{
-    font-size: 28px;
-    margin-bottom: 8px;
+.body_left h1{
+    font-size: 40px;
     font-weight: 500;
-    max-width: 90%;
 }
-.body_review_content_3{
-    font-size: 12px;
-    margin-bottom: 12px;
+.body_left p{
+    margin: 24px 0;
+    font-size: 18px;
 }
-.body_review_right{
-    position: relative;
-    overflow: hidden;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.body_left h3{
+    margin: 20px 0;
 }
-.body_review_right img{
-    width: 100%;
-    transition: transform 0.2s linear;
+.fb-like{
+    margin-left: 10%;
 }
-.body_review_right_top:hover img{
-    transform: scale(1.1);
-}
-.body_review_right_bottom{
-    display: flex;
-    justify-content: space-between;
-}
-.body_review_right_top{
-    position: relative;
-    overflow: hidden;
-}
-.body_review_right_bottom_child{
-    display: flex;
-    overflow: hidden;
-    position: relative;
-}
-.body_review_right_bottom_child:hover img{
-    transform: scale(1.1);
-}
-
-/* Body_content */
-
-.content_nav{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-.content_sukien_nav a:hover{
-    color: #ff8637;
-}
-.content_sukien_nav{
-    border-bottom: 2px solid #ff8637;
-
-}
-.content_sukien_nav p{
-    background-color: #ff8637;
-
-}
-.content_nav p{
-    color: #fff;
-    font-size: 14px;
-    padding: 6px 8px 4px 8px;
-    border-radius: 4px 4px 0 0;
-}
-.content_nav_right a{
-    color: #777777;
-    font-size: 14px;
-}
-.content_nav_right{
-    flex: 1;
-    padding: 0 4px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-}
-
-/* Content */
-.content_sukien_box{
-    display: flex;
-    flex-direction: column;
-}
-.content_sukien_child{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.content_sukien_item{
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    width: 23%;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    border-radius: 6px;
-    overflow: hidden;
-    transition: transform 0.2s linear;
-}
-.content_sukien_item img{
-    width: 100%;
-}
-.content_sukien_item_sub{
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 12px;
-    color: #fff;
-    background-color: #333;
-    padding: 2px 4px;
-    border-radius: 0 4px 0 8px;
-}
-.content_sukien_item:hover .content_sukien_item_sub{
-    background-color: #ff8637;
-}
-.content_sukien_item:hover .content_sukien_item_desc{
-    color: rgb(255, 134, 55);
-}
-.content_sukien_item:hover{
-    transform: scale(1.05);
-    transform: translateY(-10px);
-}
-.content_sukien_item_desc{
-    font-size: 14px;
-    font-weight: 600;
-    color: #333;
-    line-height: 20px;
-    margin: 4px 0 16px 0;
-    margin:0 6px;
-}
-/* Thong báo */
-.content_chiase_nav{
-    border-bottom: 2px solid #4caf50;
-    margin-top: 28px;
-}
-.content_chiase_nav p{
-    background-color: #4caf50;
-}
-.content_chiase_nav a:hover{
-    color: #4caf50;
-}
-.content_sukien_item:hover .content_chiase_item_sub{
-    background-color: #4caf50;
-}
-.content_sukien_item:hover .content_chiase_item_desc{
-    color: #4caf50;
-}
-
-/* footer */
 #footer{
     background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
@@ -400,7 +218,15 @@ a{
 .footer_2_icon :last-child:hover{
     color: red;
 }
-
+.body_left_content{
+    margin-top: 10px;
+}
+.body_left_content iframe{
+    margin-top: 20px;
+}
+.disabled{
+    text-decoration: line-through;
+}
 /* modal_sign-in */
 .modal_main{
     position: fixed;
@@ -567,7 +393,4 @@ a{
 .modal_log-in a{
     color: red;
     font-size: 16px;
-}
-.disabled{
-    text-decoration: line-through;
 }
