--- a/chung.css
+++ b/chung.css
@@ -81,7 +81,6 @@ a{
     font-size: 12px;
     font-weight: 200;
     line-height: 40px;
-    padding-left: 12px;
     width: 100%;
 }
 .header_list_sub li a{
@@ -90,6 +89,8 @@ a{
     line-height: 40px;
     width: 100%;
     color: #000;
+    padding-left: 12px;
+    display: block;
 }
 .header_list_child:hover{
     background-color: rgb(155, 4, 4);
@@ -225,7 +226,12 @@ a{
     margin-top: 20px;
 }
 .disabled{
-    text-decoration: line-through;
+    cursor: default;
+    opacity: 0.6;
+}
+.disabled:hover{
+    background-color: #fff!important;
+    color: #000!important;
 }
 /* modal_sign-in */
 .modal_main{
@@ -239,6 +245,24 @@ a{
     justify-content: center;
     align-items: center;
     display: none;
+    animation: fadeIn linear 0.2s;
+
+}
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes scaleUp{
+    from{
+        transform: scale(0.8);
+    }
+    to{
+        transform: scale(1);
+    }
 }
 .open{
     display: flex;
@@ -251,12 +275,16 @@ a{
     background-color: #fff;
     border-radius: 5px;
     display: none;
+    animation: scaleUp ease 0.3s;
+
 }
 .modal_log-in{
     width: 45%;
     background-color: #fff;
     border-radius: 5px;
     display: none;
+    animation: scaleUp ease 0.3s;
+
 }
 .modal_main-header{
     display: flex;
